variable rays and noisy lcs

--- a/notebooks/Synthetic lightcurves 0 - Generate data.ipynb
+++ b/notebooks/Synthetic lightcurves 0 - Generate data.ipynb
@@ -2,17 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "b85f8e98-8ea4-4e4c-9304-038107b539e2",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-95va40t2 because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -25,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-04-06 17:04:03.840763: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "2023-04-13 15:22:48.375582: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
      ]
     }
    ],
@@ -78,6 +71,7 @@
    "cell_type": "markdown",
    "id": "96b549db-fec5-45ea-9280-7236035892be",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -392,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "id": "164cb825-9aea-43e2-9d4b-4b8845efd55f",
    "metadata": {},
    "outputs": [],
@@ -416,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9943a54d-2bbf-4069-b71c-65155f93a0f3",
    "metadata": {},
    "outputs": [],
@@ -498,14 +492,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "77c759e3-28c1-415e-9015-d2fbcb5f4a81",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af9db6a876c24f93b11b86e3a496fcf7",
+       "model_id": "1f37b87ce0894ee08153068a88f2a1f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -518,7 +512,7 @@
     }
    ],
    "source": [
-    "flare_path = Path('../data/synthetic_lightcurves/3_gaussians/emission_3d.nc')\n",
+    "flare_path = Path('../data/synthetic_lightcurves/single_gaussian/emission_3d.nc')\n",
     "\n",
     "locals().update(simulation_params['model'])\n",
     "emission = xr.load_dataarray(flare_path)\n",
@@ -592,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "d82dc006-40a3-46d4-8b27-89fd8a7302ca",
    "metadata": {},
    "outputs": [
@@ -600,13 +594,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I mean: 0.3  P mean:0.14185841229980198\n"
+      "I mean: 0.29999999999999993  P mean:0.1381241689738714\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b3895069479444fbd9fc2f6be875773",
+       "model_id": "07139d9fe67643dd8b74fdd46f699c67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -620,7 +614,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11ac19f54b284019848b5bf13ef61af3",
+       "model_id": "bd1a3afe8b73477d808afe7b1f77b0ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -634,10 +628,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.animation.FuncAnimation at 0x7efb2dd583d0>"
+       "<matplotlib.animation.FuncAnimation at 0x7ff0465847f0>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,6 +651,7 @@
    "cell_type": "markdown",
    "id": "40bdc18e-d786-4270-acc3-835f3eda15e3",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1412,20 +1407,273 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90a80977-7793-4e26-88e6-3327d66597cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "816f6b79-12f0-48d4-8a83-8567ef82026f",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Combine lightcurves\n",
+    "---\n",
+    "Combine flare with stochastic background accretion"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d484ee8b-c2a3-4587-8539-d66eec36b8e9",
+   "execution_count": 48,
+   "id": "aabaded3-01ab-4573-ac4f-2644a7369274",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4494f5d2716c442da429413064f30a84",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1fbff1a104b54c7dbd0d17d33d7e154e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "37093dd035384a689c196e8199a48697",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a362669953794814a3e2fc504b65b93a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "14310188ef6f47f3b6382039b5f583dd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a7354d7ef50a41428a7eff1069c4c7a3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4cc09275a6ad4adabbedc560eb2c5377",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fe8dd6305eae436daaf985a8088d5c0b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e277708dbc954485998d31f92b6efadc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1a23cf003cfe4a678e20963e9cf386da",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c54e68e72b914e7b967073972da24ea3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3d4e280298054540add67d5e063dcd01",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "183b1c0a5da74bc3a3d16a7d53ed7558",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9118698c386746c38278b439f851477f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6d09d20deba3462e8beeb70a4b2cc746",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "sim_name = 'sim1'\n",
+    "Q_frac = 0.25\n",
+    "seed = 0\n",
+    "stokes = ['I', 'Q', 'U']\n",
+    "\n",
+    "%matplotlib widget\n",
+    "for seed in [0, 1, 2, 3, 4]:\n",
+    "    for q in [0.25, 0.5, 0.75]:\n",
+    "        disk_name = '{}_seed{}_Q_{:1.2f}'.format(sim_name, seed, q)\n",
+    "        flare_path = Path('../data/synthetic_lightcurves/flux_tube/{}_lightcurve.csv'.format(sim_name))\n",
+    "        flare = pd.read_csv(flare_path)\n",
+    "        disk_path = '../data/synthetic_lightcurves/accretion_grfs/{}_lightcurve.csv'.format(disk_name)\n",
+    "        disk = pd.read_csv(disk_path)\n",
+    "        t = flare['t']\n",
+    "        lightcurves = flare + disk\n",
+    "        lightcurves['t'] = t\n",
+    "        \n",
+    "        axes = bhnerf.visualization.plot_stokes_lc(np.array(flare[stokes]), stokes, t, plot_qu=True, label='flare')\n",
+    "        bhnerf.visualization.plot_stokes_lc(np.array(disk[stokes]), stokes, t, plot_qu=True, axes=axes, label='disk')\n",
+    "        bhnerf.visualization.plot_stokes_lc(np.array(lightcurves[stokes]), stokes, t, plot_qu=True, axes=axes, label='total', add_mean=True)\n",
+    "        axes[0].legend()\n",
+    "\n",
+    "        plt.savefig(flare_path.parent.joinpath(disk_name + '_lightcurve.pdf'))\n",
+    "        lightcurves.to_csv(flare_path.parent.joinpath(disk_name + '_lightcurve.csv'))\n",
+    "        \n",
+    "        with open(flare_path.parent.joinpath('{}_params.yaml'.format(sim_name)), 'r') as stream:\n",
+    "            simulation_params = yaml.load(stream, Loader=yaml.Loader)\n",
+    "        simulation_params.update(\n",
+    "            name=disk_name,\n",
+    "            desc='Image fluxes with background accretion',\n",
+    "            disk_path=disk_path, \n",
+    "            lightcurve_path=str(flare_path.parent.joinpath(disk_name + '_lightcurve.csv')),\n",
+    "        )\n",
+    "        \n",
+    "        with open(flare_path.parent.joinpath('{}_params.yaml'.format(simulation_params['name'])), 'w') as file:\n",
+    "            yaml.dump(simulation_params, file, default_flow_style=False)"
+   ]
   }
  ],
  "metadata": {
