cleanup after jax update

--- a/tutorials/Tutorial4 - estimate 3D emission from EHT observations.ipynb
+++ b/tutorials/Tutorial4 - estimate 3D emission from EHT observations.ipynb
@@ -15,33 +15,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "b85f8e98-8ea4-4e4c-9304-038107b539e2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-f9gq8fb0 because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to eht-imaging! v 1.2.2 \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-12-23 10:29:22.888929: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import bhnerf\n",
     "import bhnerf.constants as consts\n",
@@ -50,14 +27,15 @@
     "from datetime import datetime\n",
     "from astropy import units\n",
     "import ehtim as eh\n",
+    "from bhnerf.optimization import LogFn\n",
     "\n",
     "# Runing on 2 GPUs\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '0,3'"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '6,7'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "8f6d6b4b-c62d-41ed-a76c-18ec17c83eb5",
    "metadata": {},
    "outputs": [
@@ -65,7 +43,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/xarray/core/computation.py:700: RuntimeWarning: invalid value encountered in sqrt\n",
+      "/srv/tmp/aviad/miniconda3/envs/jax12/lib/python3.9/site-packages/xarray/core/computation.py:761: RuntimeWarning: invalid value encountered in sqrt\n",
       "  result_data = func(*input_data)\n"
      ]
     },
@@ -74,7 +52,6 @@
      "output_type": "stream",
      "text": [
       "Producing clean visibilities from movie with direct FT . . . \n",
-      "Applying Jones Matrices to data . . . \n",
       "Applying Jones Matrices to data . . . \n",
       "Adding thermal noise to data . . . \n",
       "Applying a priori calibration with estimated Jones matrices . . . \n"
@@ -91,7 +68,7 @@
     "nt = 64\n",
     "\n",
     "array = 'ngEHT'             \n",
-    "flux_scale = 0.02                   # scale image-plane fluxes to `reasonable` values  \n",
+    "flux_scale = 0.1                    # scale image-plane fluxes to `reasonable` values in Jy\n",
     "tstart = 2.0 * units.hour           # observation start time\n",
     "tstop = tstart + 40.0 * units.min   # observation stop time\n",
     "\n",
@@ -104,7 +81,6 @@
     ")\n",
     "Omega = np.sign(spin + np.finfo(float).eps) * np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
     "t_injection = -float(geos.r_o)\n",
-    "\n",
     "\n",
     "# Generate hotspot measurements (see Tutorial2) \n",
     "emission_0 = flux_scale * bhnerf.emission.generate_hotspot_xr(\n",
@@ -137,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "d0f78171-f3bc-4915-954b-90f27c10c112",
    "metadata": {},
    "outputs": [
@@ -152,18 +128,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/xarray/core/computation.py:700: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  result_data = func(*input_data)\n",
-      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/jax/lib/xla_bridge.py:390: UserWarning: jax.host_count has been renamed to jax.process_count. This alias will eventually be removed; please update your code.\n",
-      "  warnings.warn(\n",
-      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/jax/lib/xla_bridge.py:377: UserWarning: jax.host_id has been renamed to jax.process_index. This alias will eventually be removed; please update your code.\n",
-      "  warnings.warn(\n"
+      "/srv/tmp/aviad/miniconda3/envs/jax12/lib/python3.9/site-packages/xarray/core/computation.py:761: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  result_data = func(*input_data)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3424160bd95846f5972758e24132db45",
+       "model_id": "9f5090a968b8495ba44265df7d84fb93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -181,8 +153,6 @@
     "Note that logging is done using tensorboardX. To view the tensorboard (from the main directory):\n",
     "    `tensorboard --logdir runs`\n",
     "\"\"\"\n",
-    "from bhnerf.optimization import LogFn\n",
-    "\n",
     "batchsize = 6\n",
     "z_width = 4                # maximum disk width [M]\n",
     "rmax = fov_M / 2           # maximum recovery radius\n",
@@ -212,19 +182,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "4ef13b84-4000-4e16-80ce-14554bf9bef2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96b3c3bc48594a508ce5748d3081927a",
+       "model_id": "75a83cbb9dd14d1393a0e9e07bff150b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Figure(camera=PerspectiveCamera(fov=45.0, position=(0.0, -2.1650635094610964, 1.250000000000000…"
+       "Container(figure=Figure(box_center=[0.5, 0.5, 0.5], box_size=[1.0, 1.0, 1.0], camera=PerspectiveCamera(fov=45.…"
       ]
      },
      "metadata": {},
@@ -236,7 +206,7 @@
     "Visualize the recovered 3D emission\n",
     "This visualization requires ipyvolume: https://ipyvolume.readthedocs.io/en/latest/\n",
     "\"\"\"\n",
-    "emission_estimate = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.state.params, fov_M)\n",
+    "emission_estimate = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.params, fov=fov_M)\n",
     "bhnerf.visualization.ipyvolume_3d(emission_estimate, fov=fov_M, level=[0, 0.2, 0.7])"
    ]
   }
@@ -257,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
