--- a/notebooks/ALMA lightcurves 0 - Simple hotspot.ipynb
+++ b/notebooks/ALMA lightcurves 0 - Simple hotspot.ipynb
@@ -468,9 +468,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jax",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "jax"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -482,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
