--- a/tutorials/Tutorial3 - estimate 3D emission from image plane.ipynb
+++ b/tutorials/Tutorial3 - estimate 3D emission from image plane.ipynb
@@ -20,17 +20,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-1yqb86dj because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to eht-imaging! v 1.2.2 \n",
+      "Welcome to eht-imaging! v 1.2.5 \n",
       "\n"
      ]
     },
@@ -38,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-23 11:28:21.200390: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "WARNING:absl:Tensorflow library not found, tensorflow.io.gfile operations will use native shim calls. GCS paths (i.e. 'gs://...') cannot be accessed.\n"
      ]
     }
    ],
@@ -50,7 +43,7 @@
     "from astropy import units\n",
     "\n",
     "# Runing on 2 GPUs\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '1,2'"
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '6,7'"
    ]
   },
   {
@@ -63,7 +56,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/xarray/core/computation.py:700: RuntimeWarning: invalid value encountered in sqrt\n",
+      "/srv/tmp/aviad/miniconda3/envs/jax12/lib/python3.9/site-packages/xarray/core/computation.py:761: RuntimeWarning: invalid value encountered in sqrt\n",
       "  result_data = func(*input_data)\n"
      ]
     }
@@ -115,18 +108,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/xarray/core/computation.py:700: RuntimeWarning: invalid value encountered in sqrt\n",
-      "  result_data = func(*input_data)\n",
-      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/jax/lib/xla_bridge.py:390: UserWarning: jax.host_count has been renamed to jax.process_count. This alias will eventually be removed; please update your code.\n",
-      "  warnings.warn(\n",
-      "/scratch/imaging/projects/bh_nerf/envs/jax/lib/python3.9/site-packages/jax/lib/xla_bridge.py:377: UserWarning: jax.host_id has been renamed to jax.process_index. This alias will eventually be removed; please update your code.\n",
-      "  warnings.warn(\n"
+      "/srv/tmp/aviad/miniconda3/envs/jax12/lib/python3.9/site-packages/xarray/core/computation.py:761: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  result_data = func(*input_data)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09a3747eb2e448c7b4f5e00666566773",
+       "model_id": "0e5d09e4486e4f8c86a48e255961890a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -181,12 +170,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b7822610a1347e2b3f36cf6432d0ed9",
+       "model_id": "8a48e3ece03b44efb907dbb7cc313977",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Figure(camera=PerspectiveCamera(fov=45.0, position=(0.0, -2.1650635094610964, 1.250000000000000…"
+       "Container(figure=Figure(box_center=[0.5, 0.5, 0.5], box_size=[1.0, 1.0, 1.0], camera=PerspectiveCamera(fov=45.…"
       ]
      },
      "metadata": {},
@@ -198,16 +187,16 @@
     "Visualize the recovered 3D emission\n",
     "This visualization requires ipyvolume: https://ipyvolume.readthedocs.io/en/latest/\n",
     "\"\"\"\n",
-    "emission_estimate = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.state.params, fov=fov_M)\n",
+    "emission_estimate = bhnerf.network.sample_3d_grid(predictor.apply, optimizer.params, fov=fov_M)\n",
     "bhnerf.visualization.ipyvolume_3d(emission_estimate, fov=fov_M, level=[0, 0.2, 0.7])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jax",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "jax"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -219,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
