refactoring alma methods

--- a/notebooks/Synthetic lightcurves 0 - Generate data.ipynb
+++ b/notebooks/Synthetic lightcurves 0 - Generate data.ipynb
@@ -7,17 +7,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-v8mq2ovl because the default path (/home/jovyan/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to eht-imaging! v 1.2.2 \n",
+      "Welcome to eht-imaging! v 1.2.5 \n",
       "\n"
      ]
     },
@@ -25,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-08 13:35:39.630107: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /.singularity.d/libs\n"
+      "WARNING:absl:Tensorflow library not found, tensorflow.io.gfile operations will use native shim calls. GCS paths (i.e. 'gs://...') cannot be accessed.\n"
      ]
     }
    ],
@@ -40,12 +33,31 @@
     "from tqdm.auto import tqdm\n",
     "from bhnerf import constants as consts\n",
     "import pandas as pd\n",
-    "data_path = Path('../data/synthetic_lightcurves')\n",
-    "\n",
+    "from tqdm.contrib import tzip\n",
     "import warnings\n",
-    "warnings.simplefilter(\"ignore\")\n",
-    "\n",
+    "warnings.simplefilter(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90ecedc6-8921-4688-b740-165f49dd92f6",
+   "metadata": {},
+   "source": [
+    "Generate synthetic ALMA lightcurves\n",
+    "---\n",
+    "Polarized lightcurves corresponding to time-averaged ALMA scan times on April 11, 2017. \\\n",
+    "Generate synthetic 3D emissivities and the resulting polarized image-plane / lightcurves."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "164cb825-9aea-43e2-9d4b-4b8845efd55f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ALMA-like scans on Apr11, 2017 (time-averaged over a window)\n",
+    "data_path = Path('../data/synthetic_lightcurves')\n",
     "t_frames = np.array([ 9.34056333,  9.35067   ,  9.36077667,  9.37088333,  9.38099   ,\n",
     "                      9.39109667,  9.40120333,  9.41131   ,  9.42169667,  9.43405   ,\n",
     "                      9.44415667,  9.45426333,  9.46437   ,  9.47447667,  9.48458333,\n",
@@ -71,16 +83,8 @@
     "                     11.21335   , 11.22345667, 11.23356333, 11.24367   , 11.25377667,\n",
     "                     11.28678833, 11.45723   , 11.46733667, 11.47744333, 11.48881333,\n",
     "                     11.50018333, 11.51092167, 11.52166   , 11.53176667, 11.54187333,\n",
-    "                     11.55198   , 11.56208667, 11.57219333, 11.5823    , 11.59240667]) * units.hr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "164cb825-9aea-43e2-9d4b-4b8845efd55f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                     11.55198   , 11.56208667, 11.57219333, 11.5823    , 11.59240667]) * units.hr\n",
+    "\n",
     "def lc_average_fluxes(lightcurves, t_window_hr=100.0/60.0):\n",
     "    radio_loops = lightcurves.where(lightcurves.t < lightcurves.t[0] + t_window_hr, drop=True)\n",
     "    I = float(radio_loops.sel(stokes='I').mean('t'))\n",
@@ -108,12 +112,7 @@
    "source": [
     "# Generate 3D emissivities\n",
     "---\n",
-    "Generate different emissivity structures for recovery:\n",
-    " - Single hotspot\n",
-    " - Two hotspots\n",
-    " - Three hotspots\n",
-    " - Flux tube\n",
-    " - Accretion disk"
+    "Generate 3D distributions of emission"
    ]
   },
   {
@@ -124,12 +123,13 @@
     "tags": []
    },
    "source": [
-    "### Single Gaussian hotspot"
+    "### Simple hotspot\n",
+    "A single Gaussian blob at a radius of $\\sim 11$M "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "3165238e-08c0-4de4-a92e-bff7898cc98f",
    "metadata": {},
    "outputs": [],
@@ -163,19 +163,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "a8f20bda-8eb8-4ef6-815d-007b5ed8caef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39833b7e5d464d579259c54361c87883",
+       "model_id": "7e3b411462074a998bb082d8b03b7011",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Figure(camera=PerspectiveCamera(fov=45.0, position=(0.0, -2.1650635094610964, 1.250000000000000…"
+       "Container(figure=Figure(box_center=[0.5, 0.5, 0.5], box_size=[1.0, 1.0, 1.0], camera=PerspectiveCamera(fov=45.…"
       ]
      },
      "metadata": {},
@@ -195,7 +195,8 @@
     "tags": []
    },
    "source": [
-    "## Two Gaussian hotspots"
+    "### Double hotspot\n",
+    "Two Gaussian hotspots where one is fixed and the other at a variable quadrant"
    ]
   },
   {
@@ -269,86 +270,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e13a0b01-3d23-4b4b-9dba-208de4be1c06",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Three Gaussian hotspots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "411e1d26-09b0-44be-befa-a7f1d1199f97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fov_M = 40.0\n",
-    "hs_fwhms = np.array([3.4, 4.2, 4.6])\n",
-    "hs_stds = hs_fwhms / 2.355\n",
-    "orbit_radii = [6.5, 11.0, 13.0]\n",
-    "rot_angles = np.deg2rad(np.array([9.5, 72.3, 221.8]))\n",
-    "\n",
-    "emission = 0\n",
-    "for hs_std, orbit_radius, rot_angle in zip(hs_stds, orbit_radii, rot_angles):\n",
-    "    emission +=  bhnerf.emission.generate_hotspot_xr(\n",
-    "        resolution=(64, 64, 64), \n",
-    "        rot_axis=[0.0, 0.0, 1.0], \n",
-    "        rot_angle=rot_angle,\n",
-    "        orbit_radius=orbit_radius,\n",
-    "        std=hs_std,\n",
-    "        r_isco=6.0,\n",
-    "        fov=(fov_M, 'GM/c^2'))\n",
-    "emission.name = 'Three Gaussians'\n",
-    "emission.attrs = {\n",
-    "    'fov_M': fov_M,\n",
-    "    'hs_fwhm': hs_fwhms,\n",
-    "    'orbit_radius': orbit_radii,\n",
-    "    'rot_angle': rot_angles\n",
-    "}\n",
-    "\n",
-    "# Save ground truth emission \n",
-    "directory = data_path.joinpath('3_gaussians')\n",
-    "directory.mkdir(parents=True, exist_ok=True)\n",
-    "emission.to_netcdf(directory.joinpath('emission_3d.nc'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "21d5c2c4-6783-4a2b-88a9-6ba47f1590a5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "948a06eb248d4e4c9d1ee440619dfd58",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Figure(camera=PerspectiveCamera(fov=45.0, position=(0.0, -2.1650635094610964, 1.250000000000000…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%matplotlib widget\n",
-    "bhnerf.visualization.ipyvolume_3d(emission, fov_M)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "22f8a7d6-79bd-4387-9092-ac14f95ef15b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### Flux Tube"
+    "### Flux Tube\n",
+    "An azimuthally elongated structure"
    ]
   },
   {
@@ -422,12 +351,14 @@
     "tags": []
    },
    "source": [
-    "### Accretion Disk (Gaussian Random Field)"
+    "### Accretion Disk\n",
+    "An accretion disk modeled as a Gaussian Random Field (using [pynoisy](https://github.com/aviadlevis/pynoisy/)). \\\n",
+    "These cells load pre-computed GRF data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "18a49373-2852-4fa5-9bec-db6c920c6cd4",
    "metadata": {},
    "outputs": [],
@@ -461,14 +392,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "8440f9d7-807b-401b-8aa3-0a228542b176",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3eec3c388854abcbc47e2b232c7c523",
+       "model_id": "d8ca39c138ea49fd96b5ec3811dee688",
        "version_major": 2,
        "version_minor": 0
       },
@@ -492,12 +423,14 @@
     "tags": []
    },
    "source": [
-    "# Generate lightcurves"
+    "# Generate lightcurves\n",
+    "---\n",
+    "Generate lightcurves with different simulation setups (`simulation_params`) with variable inclination angle ($\\theta_o$)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "id": "9943a54d-2bbf-4069-b71c-65155f93a0f3",
    "metadata": {},
    "outputs": [],
@@ -511,6 +444,8 @@
     "        'inclination': 12.0,\n",
     "        'fov_M': 40.0, \n",
     "        'num_subrays': 10,\n",
+    "        'z_width': 4 ,\n",
+    "        'rmin': 'ISCO',\n",
     "        \n",
     "        # Magnetic field / polarization parameters\n",
     "        'I_flux': 0.3,\n",
@@ -533,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "80b93537-2c82-4bb3-8899-280b4d7084dd",
    "metadata": {},
    "outputs": [],
@@ -547,42 +482,8 @@
     "        'inclination': 64.0,\n",
     "        'fov_M': 40.0, \n",
     "        'num_subrays': 10,\n",
-    "        \n",
-    "        # Magnetic field / polarization parameters\n",
-    "        'I_flux': 0.3,\n",
-    "        'Q_frac': 0.5,      # Fraction of linear polarization\n",
-    "        'b_consts': {\n",
-    "            'arad': 0,       # Radial component (in lab-frame) \n",
-    "            'avert': 1,      # Vertical component (in lab-frame)\n",
-    "            'ator': 0,       # Toroidal component (in lab-frame)\n",
-    "        },\n",
-    "        # Keplerian velocity field\n",
-    "        'Omega_dir': 'cw',\n",
-    "        \n",
-    "        # Image plane \n",
-    "        'num_alpha': 64,\n",
-    "        'num_beta': 64,\n",
-    "        't_start_obs': 9.3\n",
-    "    }}\n",
-    "locals().update(simulation_params['model'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "adb2a69f-2260-4552-a26e-06cd55445b66",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simulation_params = {\n",
-    "    'name': 'sim2_nosubrays',\n",
-    "    'desc': 'Image fluxes without background accretion',\n",
-    "    'model': {\n",
-    "        # Domain dimensions and black-hole params\n",
-    "        'spin': 0.0,\n",
-    "        'inclination': 64.0,\n",
-    "        'fov_M': 40.0, \n",
-    "        'num_subrays': 1,\n",
+    "        'z_width': 4 ,\n",
+    "        'rmin': 'ISCO',\n",
     "        \n",
     "        # Magnetic field / polarization parameters\n",
     "        'I_flux': 0.3,\n",
@@ -638,40 +539,14 @@
     }
    ],
    "source": [
-    "flare_path = Path('../data/synthetic_lightcurves/single_gaussian/emission_3d.nc')\n",
+    "flare_path = Path('../data/synthetic_lightcurves/flux_tube/emission_3d.nc')\n",
     "emission = xr.load_dataarray(flare_path)\n",
     "\n",
     "# Random sample pixel ray positions and integrate to avoid numerical artifacts\n",
     "image_plane = 0\n",
     "for i in tqdm(range(num_subrays)):\n",
-    "    # Compute geodesics\n",
-    "    geos = bhnerf.kgeo.image_plane_geos(\n",
-    "        spin, np.deg2rad(inclination), \n",
-    "        num_alpha=num_alpha, num_beta=num_beta, \n",
-    "        alpha_range=[-fov_M/2, fov_M/2],\n",
-    "        beta_range=[-fov_M/2, fov_M/2],\n",
-    "        #randomize_subpixel_rays=True\n",
-    "    )\n",
+    "    geos, Omega, J = bhnerf.alma.image_plane_model(np.deg2rad(inclination), spin, simulation_params['model'], randomize_subpixel_rays=True)\n",
     "    t_injection = -float(geos.r_o + fov_M/4)\n",
-    "\n",
-    "    # Keplerian velocity field\n",
-    "    rot_sign = {'cw': -1, 'ccw': 1}\n",
-    "    Omega = rot_sign[Omega_dir] * np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
-    "    umu = bhnerf.kgeo.azimuthal_velocity_vector(geos, Omega)\n",
-    "    g = bhnerf.kgeo.doppler_factor(geos, umu)\n",
-    "\n",
-    "    # Magnitude normalized magnetic field in fluid-frame\n",
-    "    b = bhnerf.kgeo.magnetic_field_fluid_frame(geos, umu, **b_consts)\n",
-    "    z_width = 4                                      # maximum disk width [M]\n",
-    "    rmax = fov_M / 2                                 # maximum recovery radius\n",
-    "    rmin = float(bhnerf.constants.isco_pro(spin))    # minimum recovery radius\n",
-    "    domain = np.bitwise_and(np.bitwise_and(np.abs(geos.z) < z_width, geos.r > rmin), geos.r < rmax)\n",
-    "    b_mean = np.sqrt(np.sum(b[domain]**2, axis=-1)).mean()\n",
-    "    b /= b_mean\n",
-    "\n",
-    "    # Polarized emission factors (including parallel transport)\n",
-    "    J = np.nan_to_num(bhnerf.kgeo.parallel_transport(geos, umu, g, b, Q_frac=Q_frac, V_frac=0), 0.0)\n",
-    "\n",
     "    image_plane += (1/num_subrays) * bhnerf.emission.image_plane_dynamics(\n",
     "        emission, geos, Omega, t_frames, t_injection, J, t_start_obs=t_start_obs*units.hr\n",
     "    )\n",
@@ -775,6 +650,7 @@
    "cell_type": "markdown",
    "id": "40bdc18e-d786-4270-acc3-835f3eda15e3",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1165,7 +1041,7 @@
    ],
    "source": [
     "I_flux = 2.4\n",
-    "sim_base_name = 'sim2'\n",
+    "sim_base_name = 'sim1'\n",
     "\n",
     "Q_fracs = [0.25, 0.5, 0.75]\n",
     "seeds = [1, 2, 3]\n",
@@ -1180,34 +1056,9 @@
     "\n",
     "        # Random sample pixel ray positions and integrate to avoid numerical artifacts\n",
     "        image_plane = 0\n",
-    "        for i in tqdm(range(num_subrays), leave=False):\n",
-    "            # Compute geodesics\n",
-    "            geos = bhnerf.kgeo.image_plane_geos(\n",
-    "                spin, np.deg2rad(inclination), \n",
-    "                num_alpha=num_alpha, num_beta=num_beta, \n",
-    "                alpha_range=[-fov_M/2, fov_M/2],\n",
-    "                beta_range=[-fov_M/2, fov_M/2],\n",
-    "                randomize_subpixel_rays=True\n",
-    "            )\n",
-    "            \n",
-    "            # Keplerian velocity field\n",
-    "            rot_sign = {'cw': -1, 'ccw': 1}\n",
-    "            Omega = rot_sign[Omega_dir] * np.sqrt(geos.M) / (geos.r**(3/2) + geos.spin * np.sqrt(geos.M))\n",
-    "            umu = bhnerf.kgeo.azimuthal_velocity_vector(geos, Omega)\n",
-    "            g = bhnerf.kgeo.doppler_factor(geos, umu)\n",
-    "\n",
-    "            # Magnitude normalized magnetic field in fluid-frame\n",
-    "            b = bhnerf.kgeo.magnetic_field_fluid_frame(geos, umu, **b_consts)\n",
-    "            z_width = 4                                      # maximum disk width [M]\n",
-    "            rmax = fov_M / 2                                 # maximum recovery radius\n",
-    "            rmin = float(bhnerf.constants.isco_pro(spin))    # minimum recovery radius\n",
-    "            domain = np.bitwise_and(np.bitwise_and(np.abs(geos.z) < z_width, geos.r > rmin), geos.r < rmax)\n",
-    "            b_mean = np.sqrt(np.sum(b[domain]**2, axis=-1)).mean()\n",
-    "            b /= b_mean\n",
-    "\n",
-    "            # Polarized emission factors (including parallel transport)\n",
-    "            J = np.nan_to_num(bhnerf.kgeo.parallel_transport(geos, umu, g, b, Q_frac=Q_frac, V_frac=0), 0.0)\n",
-    "\n",
+    "        for i in tqdm(range(num_subrays)):\n",
+    "            geos, Omega, J = bhnerf.alma.image_plane_model(np.deg2rad(inclination), spin, simulation_params['model'], randomize_subpixel_rays=True)\n",
+    "            t_injection = -float(geos.r_o + fov_M/4)\n",
     "            image_plane += (1/num_subrays) * bhnerf.emission.image_plane_dynamics(emission, geos, Omega, 0.0, 0.0, J, slow_light=False)\n",
     "\n",
     "        image_plane = xr.DataArray(\n",
@@ -1249,49 +1100,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "b29b2a81-3d19-48e1-8096-0d174844c2a4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b96cccc292f1401f9dc52da591aabb8a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.animation.FuncAnimation at 0x7f593112b3d0>"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%matplotlib widget\n",
-    "dynamic_range = 1.e3\n",
-    "gamma = 0.1\n",
-    "gamma_fn = lambda movie : (movie + np.max(movie) / dynamic_range)**(gamma)\n",
-    "log_fn = lambda movie: np.log10(movie + np.max(movie) / dynamic_range)\n",
-    "log_fn(image_plane.sel(stokes='I')).visualization.animate()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "816f6b79-12f0-48d4-8a83-8567ef82026f",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1393,9 +1205,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jax",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "jax"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1407,7 +1219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
